--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nodeui-express-mongo",
-  "version": "1.0.0",
+  "name": "node-blog",
+  "version": "1.3.0",
   "description": "",
   "main": "server.js",
   "scripts": {
